--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,19 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="logo">LOGO!</string>
+
+        <string name="action_settings">Settings</string>
+        <string name="home">Home</string>
+        <string name="cpu">CPU</string>
+        <string name="motherboards">Motherboards</string>
+        <string name="ram">RAM</string>
+        <string name="hdd">HDD</string>
+        <string name="sdd">SDD</string>
+        <string name="graphics_cards">Graphics cards</string>
+        <string name="fans">Fans</string>
+        <string name="optical_drives">Optical drives</string>
+        <string name="towers">Towers</string>
+        <string name="power_supplies">Power supplies</string>
+
 </resources>
