Реализована кнопка RAM

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,7 +7,7 @@
         <string name="ram">Оперативная память</string>
         <string name="hdd">Жесткие диски</string>
         <string name="ssd">Твердотельные накопители</string>
-        <string name="graphics_cards">Видео карты</string>
+        <string name="graphics_cards">Видеокарты</string>
         <string name="fans">Вентиляторы</string>
         <string name="optical_drives">Оптические приводы</string>
         <string name="towers">Корпуса</string>
@@ -16,5 +16,6 @@
         <string name="computing_accessories">Комплектующие для ПК</string>
         <string name="manufacturer">Производитель</string>
         <string name="socket">Разъем</string>
+        <string name="type_of_memory">Тип памяти</string>
 
 </resources>
