--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,12 +16,15 @@
     <string name="optical_drives">Optical drives</string>
     <string name="towers">Towers</string>
     <string name="power_supplies">Power supplies</string>
+    <string name="coolers">Coolers</string>
+    <string name="thermal_paste">Thermal paste</string>
 
     <string name="computing_accessories">Computing accessories</string>
     <string name="manufacturer">Manufacturer</string>
     <string name="socket">Socket</string>
     <string name="type_of_memory">Type of memory</string>
     <string name="memory">Memory</string>
+    <string name="category">Category</string>
 
     <string name="intel">INTEL</string>
     <string name="amd">AMD</string>
@@ -103,4 +106,5 @@
     <string name="video_card_5">2 Gb</string>
     <string name="video_card_6">1024 Mb</string>
     <string name="video_card_7">512 Mb</string>
+
 </resources>
