--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,6 +22,8 @@
         <string name="memory">Кол-во памяти</string>
         <string name="category">Категория</string>
         <string name="type_of_the_optical_drive">Тип оптического привода</string>
+        <string name="form_factor">Форм-фактор МП</string>
+        <string name="power">Мощность</string>
 
         <string name="hdd_1">10 Тб</string>
         <string name="hdd_2">8 Тб</string>
@@ -71,5 +73,20 @@
         <string name="video_card_5">2 Гб</string>
         <string name="video_card_6">1024 Мб</string>
         <string name="video_card_7">512 Мб</string>
-
+        
+        <string name="power_1">Более 1000 Вт</string>
+        <string name="power_2">851 – 1000 Вт</string>
+        <string name="power_3">801 – 850 Вт</string>
+        <string name="power_4">751 – 800 Вт</string>
+        <string name="power_5">701 – 750 Вт</string>
+        <string name="power_6">651 – 700 Вт</string>
+        <string name="power_7">601 – 650 Вт</string>
+        <string name="power_8">551 – 600 Вт</string>
+        <string name="power_9">501 – 550 Вт</string>
+        <string name="power_10">451 – 500 Вт</string>
+        <string name="power_11">401 – 450 Вт</string>
+        <string name="power_12">351 – 400 Вт</string>
+        <string name="power_13">301 – 350 Вт</string>
+        <string name="power_14">Менее 300 Вт</string>
+        
 </resources>
